SERVER-49539 Populate a bucket in $bucketAuto only when required